--- a/index.ipynb
+++ b/index.ipynb
@@ -267,6 +267,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import plotly\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
@@ -275,7 +282,7 @@
     "layout = build_layout(options = {'title': 'RSS with changes to y-intercept', 'xaxis': {'title': 'y-intercept value'}, 'yaxis': {'title': 'RSS'}})\n",
     "b_values = list(range(70, 150, 10)[:3])\n",
     "rss = [10852, 9690, 9128, 9166, 9804, 11042, 12880, 15318][:3]\n",
-    "acost_curve_trace = trace_values(b_values, rss, mode=\"lines\")\n",
+    "cost_curve_trace = trace_values(b_values, rss, mode=\"lines\")\n",
     "plot([cost_curve_trace], layout)"
    ]
   },
