Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,10 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
   },
   {
    "cell_type": "code",
